# aimabird

./: .gitignore  CMakeLists.txt  README.md  aimabird_build.sh  package.xml  run_control.sh
logs/: .gitignore
src/: AttControl.cpp  AttControl.h  AttControlTest.cpp  AttControlTest.h  EstimationTest.cpp  EstimationTest.h  Logger.hpp  Math.hpp  Params.h  PathPlanner.hpp  Replay.hpp  SimpleEstimator.hpp  aimabird_example.py  aimbird_example.py  logplot.py  main.cpp  replay.cpp  start_control.cpp  start_planner.cpp  start_test.cpp
